Bug 825762 - Replace VFAT reserved character with '_' to avoid file-transferring failure, r=qdot